# phish

./: CMakeLists.txt  LICENSE  README  index.html  index.txt
bait/: bait.py  version.py
bench/: Bench.py  CMakeLists.txt  Makefile.common  Makefile.linux  batch.redsky.chain  batch.redsky.hash  batch.redsky.pp  chain.cpp  hash.cpp  loop.cpp  oneway.cpp  pingpong.cpp  self.cpp  ssh-test.py
doc/: Bait.html  Bait.txt  Examples.html  Examples.txt  Intro.html  Intro.txt  Library.html  Library.txt  Manual.html  Manual.txt  Minnows.html  Minnows.txt  PDFgen.sh  Section_bait.html  Section_bait.txt  Section_errors.html  Section_errors.txt  Section_examples.html  Section_examples.txt  Section_intro.html  Section_intro.txt  Section_library.html  Section_library.txt  Section_minnows.html  Section_minnows.txt  Section_python.html  Section_python.txt  bait_connect.html  bait_connect.txt  bait_hook.html  bait_hook.txt  bait_layout.html  bait_layout.txt  bait_minnow.html  bait_minnow.txt  bait_school.html  bait_school.txt  bait_set.html  bait_set.txt  bait_variable.html  (+59 more)
example/: CMakeLists.txt  hook-styles.cpp  hook-styles.py  in.bottle  in.chain  in.edge  in.filelist  in.hash  in.hash.py  in.hash2  in.hash2.py  in.hook  in.hook-styles  in.loop  in.loop.py  in.pingpong  in.pp  in.pp.py  in.ring  in.rmat  in.sgi  in.sgi_one  in.slow  in.tri  in.tri_one  in.wc  in.wc.py  in.wordcount  in.wrap-udp  in.wrapsink  in.wrapsource  in.wrapsourcefile  in.wrapss  sgi.path  wc.cpp  word-count.cpp  word-count.py
example2/: CMakeLists.txt  count.py  file2words.py  filegen.py  in.pp  ping.py  pong.py  print.py  run-cpp-zmq-phish-ping-pong.py  run-cpp-zmq-phish-word-count.py  slowdown.py  sort.py  start-python-ping-pong.py  start-python-slow.py  start-python-tee.py  start-python-word-count.py  zmq-word-count.cpp  zmq-word-count.py
jonring/: in.ring  ring-source.py  ring-worker.py
launch/: launch.py
minnow/: CMakeLists.txt  Makefile  Makefile.common  Makefile.linux  Makefile.linux.mpi  Makefile.linux.zmq  Makefile.mac  Makefile.mac.mpi  Makefile.mac.zmq  Makefile.nebula  Makefile.nebula.mpi  Makefile.nebula.zmq  Makefile.redsky.mpi  Makefile.redsky.zmq  ccdummy.cpp  chain.cpp  chain.py  count.cpp  count.py  count_delay.py  echo.c  edge.cpp  edge.py  edgegen.cpp  file2fields.cpp  file2words.cpp  file2words.py  filegen.cpp  filegen.py  loop.cpp  loop.py  map.cpp  map.py  ping.cpp  ping.py  pong.cpp  pong.py  print.cpp  print.py  readgraph.py  (+29 more)
minnow2/: CMakeLists.txt  count.cpp  file2words.cpp  filegen.cpp  ping.cpp  pong.cpp  print.cpp  sort.cpp
mpionly/: Makefile.common  Makefile.linux  Makefile.redsky  README  chain.cpp  hashed.cpp
perf/: CMakeLists.txt  mpi-latency.cpp  mpi-throughput.cpp  perf.py  phish-latency-b.cpp  phish-loop.cpp  phish-map.cpp  phish-mpi-latency-a.cpp  phish-mpi-latency-b.cpp  phish-mpi-latency.in  phish-mpi-throughput-a.cpp  phish-mpi-throughput-b.cpp  phish-reduce.cpp  phish-source.cpp  phish-throughput-a.cpp  phish-throughput-b.cpp  phish-zmq-latency-a.cpp  phish-zmq-latency-b.cpp  phish-zmq-throughput-a.cpp  phish-zmq-throughput-b.cpp  plot-hash.py  plot-hashed.py  plot-latency.py  plot-loop.py  plot-loops.py  plot-rate.py  plot-tests.py  plot-throughput.py  run-cpp-mpi-latency.py  run-cpp-mpi-throughput.py  run-cpp-phish-mpi-hashed.py  run-cpp-phish-mpi-latency.py  run-cpp-phish-mpi-loop.py  run-cpp-phish-mpi-throughput.py  run-cpp-phish-zmq-hashed.py  run-cpp-phish-zmq-latency.py  run-cpp-phish-zmq-loop.py  run-cpp-phish-zmq-throughput.py  run-cpp-zmq-latency.py  run-cpp-zmq-throughput.py  (+21 more)
python/: bait.py  phish.py  school.py  setup_mpich.py
python/bait/: __init__.py  graphviz.py  zmq.py
python/phish/: __init__.py  mpi.py  zmq.py
python/phish/bait/: __init__.py  graphviz.py  mpi.py  zmq.py
python/phish2/: school.py
sbench/: CMakeLists.txt  README
sbench/doc/: stream.txt
sbench/generate/: CMakeLists.txt
sbench/generate/bias_powerlaw/: CMakeLists.txt  Makefile  powerlaw.h  udpgen.c
sbench/generate/rmat/: Makefile  random_park.h  rmat.h  udp_throw.h  udpgen.c
sbench/phish/: CMakeLists.txt  Makefile.linux.mpi  Makefile.linux.zmq  Makefile.mac.mpi  Makefile.mac.zmq  Makefile.nebula.mpi  Makefile.nebula.zmq  Makefile.redsky.mpi  anomaly.cpp  anomaly.py  in.anomaly  wrap-udp.cpp
sbench/serial/: Build.sh  CMakeLists.txt  anomaly  anomaly.cpp  anomaly.py  scanfile.py
src/: CMakeLists.txt  Makefile.linux  Makefile.mac  Makefile.nebula  Makefile.redsky  phish-bait-common.cpp  phish-bait-common.h  phish-bait-graphviz.cpp  phish-bait-mpi-common.cpp  phish-bait-mpi-common.h  phish-bait-mpi-config.cpp  phish-bait-mpi.cpp  phish-bait-null.cpp  phish-bait-zmq.cpp  phish-bait.h  phish-bait.hpp  phish-common.cpp  phish-common.h  phish-mpi.cpp  phish-school-zmq.cpp  phish-school.h  phish-school.hpp  phish-zmq.cpp  phish.cpp  phish.h  phish.hpp
test/: CMakeLists.txt  phish_query.cpp  phish_query_cpp.cpp  type_conversion.cpp
www/: authors.html  authors.txt  bug.html  bug.txt  contribute.html  contribute.txt  features.html  features.txt  index.txt  lingo.html  lingo.txt  papers.html  papers.txt  phish.html  phish.txt
www/patches/: files.13Sep12  files.14Jan13  files.14Sep12  files.15Jan15  files.15Sep12  files.16Jan15  files.17Feb15  files.18Sep12
