include_directories(${CMAKE_SOURCE_DIR}/src)

if(BUILD_MPI_BACKEND)
  file(GLOB CPP_FILES *.cpp)
  foreach(CPP_FILE ${CPP_FILES})
   get_filename_component(MINNOW ${CPP_FILE} NAME_WE)
    set(MINNOW_EXECUTABLE "mpi-${MINNOW}")
    message(STATUS "Configuring MPI minnow \"${MINNOW}\"")
    add_executable(${MINNOW_EXECUTABLE} ${CPP_FILE})
    target_link_libraries(${MINNOW_EXECUTABLE} phish-mpi)
  endforeach(CPP_FILE)
endif(BUILD_MPI_BACKEND)


if(BUILD_ZMQ_BACKEND)
  file(GLOB CPP_FILES *.cpp)
  foreach(CPP_FILE ${CPP_FILES})
   get_filename_component(MINNOW ${CPP_FILE} NAME_WE)
    set(MINNOW_EXECUTABLE "zmq-${MINNOW}")
    message(STATUS "Configuring ZMQ minnow \"${MINNOW}\"")
    add_executable(${MINNOW_EXECUTABLE} ${CPP_FILE})
    target_link_libraries(${MINNOW_EXECUTABLE} phish-zmq)
  endforeach(CPP_FILE)
endif(BUILD_ZMQ_BACKEND)
